查詢和退選都用好了

--- a/public/home.html
+++ b/public/home.html
@@ -31,7 +31,7 @@
   <a href="search.html" class="home-button">查詢頁面</a>
 
   <!-- 回首頁按鈕 2 -->
-  <a href="index.html" class="home-button">退選頁面</a>
+  <a href="drop_the_course.html" class="home-button">退選頁面</a>
 
   <!-- 回首頁按鈕 3 -->
   <a href="index.html" class="home-button">加選頁面</a>
