--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 
 
                     alert('登入成功');
-                    window.location.href = 'search.html'; // 導向首頁
+                    window.location.href = 'home.html'; // 導向首頁
                 } else {
                     const errorMessage = document.getElementById('errorMessage');
                     errorMessage.style.display = 'block';
