--- a/public/home.html
+++ b/public/home.html
@@ -34,7 +34,7 @@
   <a href="drop_the_course.html" class="home-button">退選頁面</a>
 
   <!-- 回首頁按鈕 3 -->
-  <a href="index.html" class="home-button">加選頁面</a>
+  <a href="add_course.html" class="home-button">加選頁面</a>
 </div>
 
 </body>
