--- a/public/add_course.html
+++ b/public/add_course.html
@@ -125,7 +125,7 @@
 </table>
 
 
-<a href="index.html" class="home-btn">回首頁</a>
+<a href="home.html" class="home-btn">回首頁</a>
 
 <script>
     // 獲取用戶資訊
