--- a/public/home.html
+++ b/public/home.html
@@ -35,6 +35,7 @@
 
   <!-- 回首頁按鈕 3 -->
   <a href="add_course.html" class="home-button">加選頁面</a>
+  <a href="index.html" class="home-button">登出</a>
 </div>
 
 </body>
