--- a/public/drop_the_course.html
+++ b/public/drop_the_course.html
@@ -90,6 +90,24 @@
 
 <script>
     const username = localStorage.getItem('User_now');
+    async function loadStudentCredits() {
+        try {
+            const response = await fetch('/api/student-credits', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username })
+            });
+
+            const data = await response.json();
+            if (data.success) {
+                document.getElementById('selectedCredits').textContent = data.credits;
+            } else {
+                console.error('Failed to load credits:', data.message);
+            }
+        } catch (error) {
+            console.error('Error fetching student credits:', error);
+        }
+    }
 
     function createScheduleTable() {
         const scheduleBody = document.getElementById('scheduleBody');
@@ -171,6 +189,7 @@
     document.addEventListener('DOMContentLoaded', () => {
         createScheduleTable();
         loadSchedule();
+        loadStudentCredits();
     });
 </script>
 </body>
