--- a/public/drop_the_course.html
+++ b/public/drop_the_course.html
@@ -89,6 +89,24 @@
 <a href="home.html" class="home-btn">回首頁</a>
 
 <script>
+    // Idle timeout to redirect to index.html after 10 minutes of inactivity
+    let idleTimer;
+    const idleTimeout = 10000; // 10 minutes in milliseconds
+
+    function resetIdleTimer() {
+        clearTimeout(idleTimer);
+        idleTimer = setTimeout(() => {
+            window.location.href = 'index.html';
+        }, idleTimeout);
+    }
+
+    // Reset the timer on any user interaction
+    window.onload = resetIdleTimer;
+    document.onmousemove = resetIdleTimer;
+    document.onkeypress = resetIdleTimer;
+    document.onscroll = resetIdleTimer;
+    document.onclick = resetIdleTimer;
+
     const username = localStorage.getItem('User_now');
     async function loadStudentCredits() {
         try {
