--- a/public/home.html
+++ b/public/home.html
@@ -38,5 +38,26 @@
   <a href="index.html" class="home-button">登出</a>
 </div>
 
+<script>
+  // Idle timeout to redirect to index.html after 10 minutes of inactivity
+  let idleTimer;
+  const idleTimeout = 10000; // 10 minutes in milliseconds
+
+  function resetIdleTimer() {
+    clearTimeout(idleTimer);
+    idleTimer = setTimeout(() => {
+      window.location.href = 'index.html';
+    }, idleTimeout);
+  }
+
+  // Reset the timer on any user interaction
+  window.onload = resetIdleTimer;
+  document.onmousemove = resetIdleTimer;
+  document.onkeypress = resetIdleTimer;
+  document.onscroll = resetIdleTimer;
+  document.onclick = resetIdleTimer;
+</script>
+
+
 </body>
 </html>
