--- a/public/search.html
+++ b/public/search.html
@@ -27,6 +27,24 @@
 <button id="homeButton" onclick="goHome()">回首頁</button>
 
 <script>
+    // Idle timeout to redirect to index.html after 10 minutes of inactivity
+    let idleTimer;
+    const idleTimeout = 10000; // 10 minutes in milliseconds
+
+    function resetIdleTimer() {
+        clearTimeout(idleTimer);
+        idleTimer = setTimeout(() => {
+            window.location.href = 'index.html';
+        }, idleTimeout);
+    }
+
+    // Reset the timer on any user interaction
+    window.onload = resetIdleTimer;
+    document.onmousemove = resetIdleTimer;
+    document.onkeypress = resetIdleTimer;
+    document.onscroll = resetIdleTimer;
+    document.onclick = resetIdleTimer;
+
     // 查詢課程資料
     const username = localStorage.getItem('User_now');
     document.getElementById('searchButton').addEventListener('click', () => {
