--- a/public/drop_the_course.html
+++ b/public/drop_the_course.html
@@ -232,7 +232,7 @@
                 const row = document.createElement('tr');
                 row.innerHTML = `
                 <td>${course.course_id}</td>
-                <td>${course.name}</td> <!-- 顯示課程名稱 -->
+                <td>${course.name}</td>
                 <td><button onclick="dropCourse('${course.course_id}')" class="btn">退選</button></td>
             `;
                 tbody.appendChild(row);
